--- a/index.html
+++ b/index.html
@@ -34,5 +34,19 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="hero">
+        <div class="hero-container">
+          <h5 id="intro">Hi, my name is</h5>
+          <h1 id="name">D'Angelo Sandro.</h1>
+          <h2 id="sub-title">I build things for the web.</h2>
+          <p id="hero-information">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur, perferendis sapiente. Illo excepturi vero unde doloremque at ratione soluta fuga dolores ipsa eius, modi aut labore, harum esse illum
+            magnam.
+          </p>
+          <button id="project-button">Check out my projects!</button>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
