update on HTML and CSS, finished about me page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&display=swap" rel="stylesheet" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet" />
     <script src="script.js"></script>
     <title>Portfolio</title>
   </head>
@@ -45,6 +47,54 @@
             magnam.
           </p>
           <button id="project-button">Check out my projects!</button>
+        </div>
+      </section>
+      <section class="about-me">
+        <div class="container-about-me">
+          <h3 class="about-me-title"><span>01.</span>About me</h3>
+        </div>
+        <div class="about-me-container">
+          <div class="about-me-text">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum dicta distinctio quidem, animi doloribus natus accusantium culpa, impedit, incidunt labore aliquid dolorem veritatis consequuntur recusandae
+              rem. Dicta qui laborum saepe!
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis nulla mollitia officia explicabo laudantium placeat eius illo, maxime harum praesentium at nemo quibusdam necessitatibus! Harum aliquam facilis
+              nam aliquid consectetur.
+            </p>
+            <p>Here are a few technologies i've been working with recently:</p>
+            <div class="container-tech-list">
+              <ul>
+                <li>Javascript</li>
+                <li>HTML</li>
+              </ul>
+              <ul>
+                <li>CSS (SCSS)</li>
+                <li>Github</li>
+              </ul>
+            </div>
+          </div>
+          <div class="placeholder-img">
+            <img src="images/cat.jpg" alt="" />
+          </div>
+        </div>
+      </section>
+      <section class="projects">
+        <div class="container-project-title">
+          <h3 class="project-title"><span>02.</span>Some things i've built</h3>
+        </div>
+        <div class="project-container">
+          <div class="project-image">
+            <img src="images/cat.jpg" alt="" />
+          </div>
+          <div class="project-information">
+            <h4>Features Project</h4>
+            <h3>Project One</h3>
+            <p>This is a test for the first project, this text should be changed! This is a test for the first project, this text should be changed!</p>
+            <p>Html Css Javascript</p>
+            <img src="images/github-logo.svg" alt="" />
+          </div>
         </div>
       </section>
     </main>
