worked on project section, template nearly done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             <a href="">Portfolio</a>
           </li>
         </ul>
-
         <ul class="nav-right">
           <li>
             <a href=""> <span class="nav-numbers">01.</span>About</a>
@@ -32,7 +31,9 @@
           <li>
             <a href=""><span class="nav-numbers">03.</span>Contact</a>
           </li>
-          <li><a id="resume-button" href="">Resume</a></li>
+          <li>
+            <a id="resume-button" href="">Resume</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -83,16 +84,21 @@
       <section class="projects">
         <div class="container-project-title">
           <h3 class="project-title"><span>02.</span>Some things i've built</h3>
+          <hr />
         </div>
         <div class="project-container">
           <div class="project-image">
             <img src="images/cat.jpg" alt="" />
           </div>
           <div class="project-information">
-            <h4>Features Project</h4>
+            <h4>Featured Project</h4>
             <h3>Project One</h3>
-            <p>This is a test for the first project, this text should be changed! This is a test for the first project, this text should be changed!</p>
-            <p>Html Css Javascript</p>
+            <p class="project-info">This is a test for the first project, this text should be changed! This is a test for the first project, this text should be changed!</p>
+            <div class="project-tech">
+              <p class="project-text">Html</p>
+              <p class="project-text">Css</p>
+              <p class="project-text">Javascript</p>
+            </div>
             <img src="images/github-logo.svg" alt="" />
           </div>
         </div>
