near completion of the website, most of html and scss has been done

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main>
       <section class="hero">
         <div class="hero-container">
-          <h5 id="intro">Hi, my name is</h5>
+          <h1 id="intro">Hi, my name is</h4>
           <h1 id="name">D'Angelo Sandro.</h1>
           <h2 id="sub-title">I build things for the web.</h2>
           <p id="hero-information">
@@ -88,19 +88,92 @@
         </div>
         <div class="project-container">
           <div class="project-image">
-            <img src="images/cat.jpg" alt="" />
+            <video autoplay muted loop width="100%" height="100%" >
+            <source src="video/blackjack.mp4" type="video/mp4" />
           </div>
           <div class="project-information">
             <h4>Featured Project</h4>
-            <h3>Project One</h3>
-            <p class="project-info">This is a test for the first project, this text should be changed! This is a test for the first project, this text should be changed!</p>
+            <h3>Blackjack</h3>
+            <p class="project-info">
+              This is a simple blackjack game where you play against the dealer. It uses a point system with chips, and your data is saved using localStorage. It's my first project and a fun way to learn coding basics.
+            </p>
             <div class="project-tech">
               <p class="project-text">Html</p>
               <p class="project-text">Css</p>
               <p class="project-text">Javascript</p>
             </div>
-            <img src="images/github-logo.svg" alt="" />
+            <a href="https://github.com/LetUndefined/Blackjack" target="_blank"><img src="images/github-logo.svg" alt=""></a>
           </div>
+        </div>
+        <div class="project-container reverse">
+          <div class="project-image">
+            <img src="images/Atelierlore.png" alt="" />
+          </div>
+          <div class="project-information">
+            <h4>Featured Project</h4>
+            <h3>Atelier Lore</h3>
+            <p class="project-info">
+              This is a website I created for a client’s business. It’s a clean, one-page layout with email integration for easy contact. The site focuses on simplicity, performance, and accessibility to provide a smooth
+              experience for visitors.
+            </p>
+            <div class="project-tech">
+              <p class="project-text">Html</p>
+              <p class="project-text">Css</p>
+              <p class="project-text">Javascript</p>
+            </div>
+            <div class="link-images">
+              <a href="https://github.com/LetUndefined/Project-Lore" target="_blank"><img src="images/github-logo.svg" alt=""></a>
+              <a href="https://atelierlore.com/"  target="_blank"><img src="images/link-image.png" alt=""></a>
+            </div>
+          </div>
+        </div>
+        <div class="project-container">
+          <div class="project-image">
+            <video autoplay muted loop width="100%" height="100%">
+              <source src="video/simonsays.mp4" type="video/mp4" />
+            </video>
+          </div>
+          <div class="project-information">
+            <h4>Featured Project</h4>
+            <h3>Simon Says</h3>
+            <p class="project-info">
+              A Simon Says game where players follow a pattern of colors and repeat the sequence correctly. It tracks points as you progress through the levels, with game logic handled in JavaScript. 
+            </p>
+            <div class="project-tech">
+              <p class="project-text">Html</p>
+              <p class="project-text">Css</p>
+              <p class="project-text">Javascript</p>
+            </div>
+             <a href="https://github.com/LetUndefined/SimonSaysPersonal" target="_blank"><img src="images/github-logo.svg" alt=""></a>
+          </div>
+        </div>
+        <div class="project-container reverse">
+          <div class="project-image">
+            <video autoplay muted loop width="100%" height="100%">
+              <source src="video/hangman.mp4" type="video/mp4" />
+            </video>
+          </div>
+          <div class="project-information">
+            <h4>Featured Project</h4>
+            <h3>Hangman Game</h3>
+            <p class="project-info">
+              Hangman is a classic word-guessing game where each wrong letter reveals part of a drawing. Built with JavaScript, HTML, and CSS, this project helped me practice conditional logic, dynamic rendering, and user interaction in the browser.
+            </p>
+            <div class="project-tech">
+              <p class="project-text">Html</p>
+              <p class="project-text">Css</p>
+              <p class="project-text">Javascript</p>
+            </div>
+             <a href="https://github.com/LetUndefined/Hangman-Game" target="_blank"><img src="images/github-logo.svg" alt=""></a>
+          </div>
+        </div>
+      </section>
+      <section class="contact-section">
+        <div class="contact-container">
+          <h4><span>03.</span>What's Next?</h4>
+          <h2>Get In Touch</h2>
+          <p>I'm currently looking for new opportunities. Whether you have a question or just want to say hi, i'll do my best to get back to you!</p>
+          <a href="">Say Hello</a>
         </div>
       </section>
     </main>
