--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
           </div>
           <div class="placeholder-img">
-            <img src="images/cat.jpg" alt="" />
+            <img src="images/sandro.jpeg" alt="" />
           </div>
         </div>
       </section>
@@ -87,7 +87,7 @@
           <h3 class="project-title"><span>02.</span>Some things i've built</h3>
           <hr />
         </div>
-                <div class="project-container">
+        <div class="project-container">
           <div class="project-image">
             <img src="images/Atelierlore.png" alt="" />
           </div>
