added metatags for SEO

--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <title>Portfolio</title>
+    <!-- Metatags for SEO -->
+    <meta name="description" content="The official portfolio of Sandro D'Angelo – showcasing creative projects, design work, and web development expertise.">
+    <meta name="author" content="Sandro D'Angelo">
+    <meta name="keywords" content="Sandro D'Angelo, portfolio, web developer, front-end, design, creative, UI/UX, projects, coding">
+    <meta property="og:title" content="Sandro D'Angelo | Portfolio">
+    <meta property="og:description" content="Explore the work and projects of Sandro D'Angelo – a creative web developer and designer.">
+    <meta property="og:image" content="https://www.sandrodangelo.com/images/sandro.jpeg">
+    <meta property="og:url" content="https://www.sandrodangelo.com">
+    <meta property="og:type" content="website">
+    <title>Portfolio Sandro D'Angelo</title>
   </head>
   <body>
     <header>
