added mobile sidebar for the menu

--- a/index.html
+++ b/index.html
@@ -29,12 +29,17 @@
   <body>
     <header>
       <nav class="navigation">
+        <div class="hamburger" id="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
         <ul class="nav-left">
           <li>
             <a href="#hero">Portfolio</a>
           </li>
         </ul>
-        <ul class="nav-right">
+        <ul class="nav-right" id="nav-right">
           <li>
             <a href="#about-me"> <span class="nav-numbers">01.</span>About</a>
           </li>
